--- a/styles/style.css
+++ b/styles/style.css
@@ -429,14 +429,6 @@ a {
   color: #333;
 }
 
-@media (max-width: 810px) {
-  h1 {
-    font-size: 1.8rem;
-    margin: 0 auto;
-    font-weight: 700;
-    padding-top: 10rem;
-  }
-}
 .hero-banner {
   background: url(./../assets/home.jpg) no-repeat 70% bottom;
   background-size: cover;
@@ -444,9 +436,10 @@ a {
   width: 100%;
 }
 .hero-banner .hero-content {
-  width: 20%;
-  height: 100%;
-  margin: 9rem;
+  max-width: 1200px;
+  width: 70%;
+  margin: 5rem auto;
+  height: 700px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -458,8 +451,12 @@ a {
       -ms-flex-pack: center;
           justify-content: center;
 }
+.hero-banner .hero-content h1 {
+  width: 3rem;
+}
 .hero-banner .hero-content p {
   padding-top: 0.5rem;
+  width: 15rem;
 }
 .hero-banner .hero-content a {
   display: none;
@@ -474,6 +471,9 @@ a {
     margin: 0 auto;
     padding: 30px;
     text-align: center;
+  }
+  .hero-banner .hero-content h1 {
+    width: 100%;
   }
   .hero-banner .hero-content p {
     display: none;
